--- a/views/Dashboard/headAdm.ejs
+++ b/views/Dashboard/headAdm.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title ><%=title%> </title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -58,44 +58,56 @@ lg:block lg:translate-x-0 lg:end-auto lg:bottom-0">
 
 <nav class="hs-accordion-group p-3 mt-5 w-full flex flex-col flex-wrap" data-hs-accordion-always-open>
     <ul class="space-y-1.5">
-    <li>
-        <a class="flex items-center gap-x-3.5 py-2 px-2.5 bg-hijauMuda text-sm text-white rounded-lg hover:bg-hijau" href="/admin/dashboard">
-        <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" ><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
-        Dashboard
-        </a>
-    </li>
-    <li><a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-neutral-800 rounded-lg hover:bg-gray-100" href="/admin/users">
-        <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-users"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
-        Users
-    </a></li>
-    <li><a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-neutral-800 rounded-lg hover:bg-gray-100" href="/admin/tambah-matkul">
-        <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-plus"><path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"/><path d="M14 2v4a2 2 0 0 0 2 2h4"/><path d="M9 15h6"/><path d="M12 18v-6"/></svg>
-        Tambah Mata Kuliah Remedial
-    </a></li>
-    <li><a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-neutral-800 rounded-lg hover:bg-gray-100" href="/admin/status-pendaftaran">
-        <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-pie-chart"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"/><path d="M22 12A10 10 0 0 0 12 2v10z"/></svg>
-        Status Pendaftaran
-    </a></li>
-    <li><a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-neutral-800 rounded-lg hover:bg-gray-100" href="/admin/pertanyaan">
-        <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-message-circle-question"><path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><path d="M12 17h.01"/></svg>
-        Pertanyaan
-    </a></li>
-    <li><a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-neutral-800 rounded-lg hover:bg-gray-100" href="/admin/nilai-remedial">
-        <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-book-open-check"><path d="M8 3H2v15h7c1.7 0 3 1.3 3 3V7c0-2.2-1.8-4-4-4Z"/><path d="m16 12 2 2 4-4"/><path d="M22 6V3h-6c-2.2 0-4 1.8-4 4v14c0-1.7 1.3-3 3-3h7v-2.3"/></svg>
-        Nilai Remedial
-    </a></li>
-    <li><a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-neutral-800 rounded-lg hover:bg-gray-100" href="/admin/calendar">
-        <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="18" height="18" x="3" y="4" rx="2" ry="2"/><line x1="16" x2="16" y1="2" y2="6"/><line x1="8" x2="8" y1="2" y2="6"/><line x1="3" x2="21" y1="10" y2="10"/><path d="M8 14h.01"/><path d="M12 14h.01"/><path d="M16 14h.01"/><path d="M8 18h.01"/><path d="M12 18h.01"/><path d="M16 18h.01"/></svg>
-        Calendar
-    </a></li>
-    <li>
-        <form action="/auth/logout" method="post">
-        <button type="submit" class="py-2 px-2 ml-2 mt-2 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-red-600 text-white hover:bg-red-800 disabled:opacity-50 disabled:pointer-events-none">
-            Keluar
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" x2="9" y1="12" y2="12"/></svg>
-        </button>
-    </form>
-    </li>
+        <li>
+            <a class="flex items-center gap-x-3.5 py-2 px-2.5 text-sm rounded-lg <% if(title === 'Dashboard') { %> bg-hijauMuda text-white hover:bg-hijau <% } else { %> text-neutral-800 hover:bg-gray-100 <% } %>" href="/admin/dashboard">
+                <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+                Dashboard
+            </a>
+        </li>
+        <li>
+            <a class="flex items-center gap-x-3.5 py-2 px-2.5 text-sm rounded-lg <% if(title === 'Users') { %> bg-hijauMuda text-white hover:bg-hijau <% } else { %> text-neutral-800 hover:bg-gray-100 <% } %>" href="/admin/users">
+                <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
+                Users
+            </a>
+        </li>
+        <li>
+            <a class="flex items-center gap-x-3.5 py-2 px-2.5 text-sm rounded-lg <% if(title === 'Tambah Matkul') { %> bg-hijauMuda text-white hover:bg-hijau <% } else { %> text-neutral-800 hover:bg-gray-100 <% } %>" href="/admin/tambah-matkul">
+                <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"/><path d="M14 2v4a2 2 0 0 0 2 2h4"/><path d="M9 15h6"/><path d="M12 18v-6"/></svg>
+                Tambah Mata Kuliah Remedial
+            </a>
+        </li>
+        <li>
+            <a class="flex items-center gap-x-3.5 py-2 px-2.5 text-sm rounded-lg <% if(title === 'Status Pendaftaran') { %> bg-hijauMuda text-white hover:bg-hijau <% } else { %> text-neutral-800 hover:bg-gray-100 <% } %>" href="/admin/status-pendaftaran">
+                <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"/><path d="M22 12A10 10 0 0 0 12 2v10z"/></svg>
+                Status Pendaftaran
+            </a>
+        </li>
+        <li>
+            <a class="flex items-center gap-x-3.5 py-2 px-2.5 text-sm rounded-lg <% if(title === 'Pertanyaan') { %> bg-hijauMuda text-white hover:bg-hijau <% } else { %> text-neutral-800 hover:bg-gray-100 <% } %>" href="/admin/pertanyaan">
+                <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><path d="M12 17h.01"/></svg>
+                Pertanyaan
+            </a>
+        </li>
+        <li>
+            <a class="flex items-center gap-x-3.5 py-2 px-2.5 text-sm rounded-lg <% if(title === 'Nilai Remedial') { %> bg-hijauMuda text-white hover:bg-hijau <% } else { %> text-neutral-800 hover:bg-gray-100 <% } %>" href="/admin/nilai-remedial">
+                <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M8 3H2v15h7c1.7 0 3 1.3 3 3V7c0-2.2-1.8-4-4-4Z"/><path d="m16 12 2 2 4-4"/><path d="M22 6V3h-6c-2.2 0-4 1.8-4 4v14c0-1.7 1.3-3 3-3h7v-2.3"/></svg>
+                Nilai Remedial
+            </a>
+        </li>
+        <li>
+            <a class="flex items-center gap-x-3.5 py-2 px-2.5 text-sm rounded-lg <% if(title === 'Calendar') { %> bg-hijauMuda text-white hover:bg-hijau <% } else { %> text-neutral-800 hover:bg-gray-100 <% } %>" href="/admin/calendar">
+                <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="18" height="18" x="3" y="4" rx="2" ry="2"/><line x1="16" x2="16" y1="2" y2="6"/><line x1="8" x2="8" y1="2" y2="6"/><line x1="3" x2="21" y1="10" y2="10"/><path d="M8 14h.01"/><path d="M12 14h.01"/><path d="M16 14h.01"/><path d="M8 18h.01"/><path d="M12 18h.01"/><path d="M16 18h.01"/></svg>
+                Calendar
+            </a>
+        </li>
+        <li>
+            <form action="/auth/logout" method="post">
+                <button type="submit" class="py-2 px-2 ml-2 mt-2 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-red-600 text-white hover:bg-red-800 disabled:opacity-50 disabled:pointer-events-none">
+                    Keluar
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" x2="9" y1="12" y2="12"/></svg>
+                </button>
+            </form>
+        </li>
     </ul>
 </nav>
 </div>
