--- a/views/Mahasiswa/headMhs.ejs
+++ b/views/Mahasiswa/headMhs.ejs
@@ -17,15 +17,27 @@
         </a>
         <!-- End Logo -->
       </div>
+
+
+      
   
       <!-- Button Group -->
       <div class="flex items-center gap-x-2 ms-auto py-1 md:ps-6 md:order-3 md:col-span-3">
-        <form action="/auth/logout" method="post">
-          <button type="submit" class="py-2 px-2 ml-2 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-red-600 text-white hover:bg-red-800 disabled:opacity-50 disabled:pointer-events-none">
-            Keluar
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" x2="9" y1="12" y2="12"/></svg>
-          </button>
-      </form>
+        
+          <div class="hs-dropdown relative inline-flex">
+            <button id="hs-dropdown-custom-trigger" type="button" class="hs-dropdown-toggle py-1 ps-1 pe-3 inline-flex items-center gap-x-2 text-sm font-semibold rounded-full border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none">
+              <img class="w-8 h-auto rounded-full" src="test.jpg" alt="Maria">
+              <span class="text-gray-600 font-medium truncate max-w-[7.5rem]"><%=mahasiswa.nama%></span>
+              <svg class="hs-dropdown-open:rotate-180 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m6 9 6 6 6-6"/></svg>
+            </button>
+          
+            <div class="hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden min-w-44 bg-white shadow-md rounded-lg p-2 mt-2" aria-labelledby="hs-dropdown-custom-trigger">
+              <button type="submit" class="w-full flex justify-center items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-red-800 text-center hover:bg-red-800 hover:text-white focus:outline-none focus:bg-gray-100" data-hs-overlay="#hs-sign-out-alert">
+                Keluar
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" x2="9" y1="12" y2="12"/></svg>
+              </button>
+            </div>
+          </div>
   
         <div class="md:hidden">
           <button type="button" class="hs-collapse-toggle size-[38px] flex justify-center items-center text-sm font-semibold rounded-xl border border-gray-200 text-black hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none" data-hs-collapse="#navbar-collapse-with-animation" aria-controls="navbar-collapse-with-animation" aria-label="Toggle navigation">
@@ -35,6 +47,7 @@
         </div>
       </div>
       <!-- End Button Group -->
+      
   
       <!-- Collapse -->
       <div id="navbar-collapse-with-animation" class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow md:block md:w-auto md:basis-auto md:order-2 md:col-span-6">
@@ -46,7 +59,7 @@
             <a class="inline-block <%= title === 'Profil' ? 'relative before:absolute before:bottom-0.5 before:start-0 before:-z-[1] before:w-full before:h-1 before:bg-lime-400' : '' %> text-hijau hover:text-gray-600" href="/profil">Profil</a>
           </div>
           <div>
-            <a class="inline-block text-hijau hover:text-gray-600 <%= title === 'Formulir' ? 'before:absolute before:bottom-0.5 before:start-0 before:-z-[1] before:w-full before:h-1 before:bg-lime-400' : '' %>" href="#">Formulir</a>
+            <a class="inline-block text-hijau hover:text-gray-600 <%= title === 'Formulir' ? 'relative before:absolute before:bottom-0.5 before:start-0 before:-z-[1] before:w-full before:h-1 before:bg-lime-400' : '' %>" href="/formulir">Formulir</a>
           </div>
           <div>
             <a class="inline-block text-hijau hover:text-gray-600<%= title === 'FaQ' ? 'before:absolute before:bottom-0.5 before:start-0 before:-z-[1] before:w-full before:h-1 before:bg-lime-400' : '' %>" href="#">FAQ</a>
@@ -57,5 +70,6 @@
         </div>
       </div>
       <!-- End Collapse -->
+
     </nav>
 </header>
