--- a/views/Dashboard/users.ejs
+++ b/views/Dashboard/users.ejs
@@ -10,6 +10,8 @@
                         <tr>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">ID</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Name</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">No.Telpon</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Alamat</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Tanggal Daftar</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">NIM</th>
                             <th scope="col" class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase">Aksi</th>
@@ -20,11 +22,15 @@
                             <tr>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= mahasiswa.id %></td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= mahasiswa.nama %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= mahasiswa.no_telpon %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= mahasiswa.alamat %></td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= mahasiswa.createdAt.toLocaleDateString() %></td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= mahasiswa.nim %></td>
                                 <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
-                                    <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
-                                </td>
+                                    <form action="/admin/delete" method="POST" onsubmit="return confirm('Are you sure you want to delete this mahasiswa?');">
+                                        <input type="hidden" name="id" value="<%= mahasiswa.id %>">
+                                        <button type="submit" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
+                                    </form>                                </td>
                             </tr>
                         <% }) %>
                     </tbody>
