--- a/views/Mahasiswa/headMhs.ejs
+++ b/views/Mahasiswa/headMhs.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/style.css">
     <title ><%=title%> </title>
 </head>
-<body>
+<body class="bg-tulang">
   <!-- ========== HEADER ========== -->
 <header class="fixed top-0 left-0 right-0 flex flex-wrap md:justify-start md:flex-nowrap z-10 w-full py-4 bg-white">
     <nav class="relative max-w-7xl w-full flex flex-wrap md:grid md:grid-cols-12 basis-full items-center md:px-8 mx-auto" aria-label="Global">
@@ -17,10 +17,6 @@
         </a>
         <!-- End Logo -->
       </div>
-
-
-      
-  
       <!-- Button Group -->
       <div class="flex items-center gap-x-2 ms-auto py-1 md:ps-6 md:order-3 md:col-span-3">
         
@@ -32,12 +28,22 @@
             </button>
           
             <div class="hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden min-w-44 bg-white shadow-md rounded-lg p-2 mt-2" aria-labelledby="hs-dropdown-custom-trigger">
+              <a class="flex gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 text-center hover:bg-gray-100 focus:outline-none focus:bg-gray-100" href="/profil">
+                Profil
+              </a>
+              <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 text-center hover:bg-gray-100 focus:outline-none focus:bg-gray-100" href="/faq">
+                FaQ
+              </a>
+              <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 text-center hover:bg-gray-100 focus:outline-none focus:bg-gray-100" href="/ubah">
+                Ubah Password
+              </a>
               <button type="submit" class="w-full flex justify-center items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-red-800 text-center hover:bg-red-800 hover:text-white focus:outline-none focus:bg-gray-100" data-hs-overlay="#hs-sign-out-alert">
                 Keluar
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" x2="9" y1="12" y2="12"/></svg>
               </button>
             </div>
           </div>
+
   
         <div class="md:hidden">
           <button type="button" class="hs-collapse-toggle size-[38px] flex justify-center items-center text-sm font-semibold rounded-xl border border-gray-200 text-black hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none" data-hs-collapse="#navbar-collapse-with-animation" aria-controls="navbar-collapse-with-animation" aria-label="Toggle navigation">
@@ -50,22 +56,13 @@
       
   
       <!-- Collapse -->
-      <div id="navbar-collapse-with-animation" class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow md:block md:w-auto md:basis-auto md:order-2 md:col-span-6">
+      <div id="navbar-collapse-with-animation" class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow md:block md:w-auto md:basis-auto md:order-2 md:col-span-6 px-3">
         <div class="flex flex-col gap-y-4 gap-x-0 mt-5 md:flex-row md:justify-center md:items-center md:gap-y-0 md:gap-x-7 md:mt-0">
           <div>
             <a class="relative inline-block text-hijau <%= title === 'Home' ? 'before:absolute before:bottom-0.5 before:start-0 before:-z-[1] before:w-full before:h-1 before:bg-lime-400' : '' %>" href="/" aria-current="page">Home</a>
           </div>
           <div>
-            <a class="inline-block <%= title === 'Profil' ? 'relative before:absolute before:bottom-0.5 before:start-0 before:-z-[1] before:w-full before:h-1 before:bg-lime-400' : '' %> text-hijau hover:text-gray-600" href="/profil">Profil</a>
-          </div>
-          <div>
             <a class="inline-block text-hijau hover:text-gray-600 <%= title === 'Formulir' ? 'relative before:absolute before:bottom-0.5 before:start-0 before:-z-[1] before:w-full before:h-1 before:bg-lime-400' : '' %>" href="/formulir">Formulir</a>
-          </div>
-          <div>
-            <a class="inline-block text-hijau hover:text-gray-600<%= title === 'FaQ' ? 'before:absolute before:bottom-0.5 before:start-0 before:-z-[1] before:w-full before:h-1 before:bg-lime-400' : '' %>" href="#">FAQ</a>
-          </div>
-          <div>
-            <a class="inline-block text-hijau hover:text-gray-600 <%= title === 'Ubah Password' ? 'before:absolute before:bottom-0.5 before:start-0 before:-z-[1] before:w-full before:h-1 before:bg-lime-400' : '' %>" href="/ubah">Ubah Password</a>
           </div>
         </div>
       </div>
