--- a/views/ubahPw.ejs
+++ b/views/ubahPw.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
-<body class="bg-gray-200" style="background-image:url(./RektoratView2.jpg); background-size: cover;font-family: Poppins; "></body>
+<body class="bg-gray-200" style="background-image:url(/RektoratView2.jpg); background-size: cover;font-family: Poppins; "></body>
     <main id="content" class="w-full max-w-md mx-auto p-6 mt-8">
         <div class="mt-7 bg-white/50 backdrop-blur-md rounded-xl shadow-sm">
             <div class="p-4 sm:p-7">
