--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,19 +18,36 @@
         <div class="w-full mt-10">
           <form method="post" action="/auth/process-login">
             <div class="grid gap-y-5">
+              <!-- Error Messages -->
+              <% if (errorMessages.length > 0) { %>
+                <div class="bg-red-100 text-red-800 p-4 rounded-lg">
+                  <ul>
+                    <% errorMessages.forEach(function(message) { %>
+                      <li><%= message %></li>
+                    <% }) %>
+                  </ul>
+                </div>
+              <% } %>
+              <!-- End Error Messages -->
+
               <!-- Form Group -->
               <div>
                 <div class="relative">
                   <input type="email" id="email" name="email" placeholder="Email Address" class="w-full py-3 px-4 text-sm font-medium rounded-lg border border-white bg-white text-gray-800 shadow-sm hover:bg-gray-50" required aria-describedby="email-error">
+                  <% if (errorMessages.includes('Email tidak valid')) { %>
+                    <p class="text-xs text-red-600 mt-2" id="email-error">Please include a valid email address so we can get back to you</p>
+                  <% } %>
                 </div>
-                <p class="hidden text-xs text-red-600 mt-2" id="email-error">Please include a valid email address so we can get back to you</p>
               </div>
               <!-- End Form Group -->
-  
+   
               <!-- Form Group -->
               <div>
               <div class="relative">
                 <input id="hs-toggle-password" placeholder="Password" name="password" type="password" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-white bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none" required aria-describedby="password-error">
+                <% if (errorMessages.includes('Password harus terdiri dari 8 karakter atau lebih')) { %>
+                  <p class="text-xs text-red-600 mt-2" id="password-error">8+ characters required</p>
+                <% } %>
                 <button type="button" data-hs-toggle-password='{
                   "target": "#hs-toggle-password"
                 }' class="absolute top-0.5 end-0 p-3.5 rounded-e-md">
@@ -44,10 +61,9 @@
                   </svg>
                 </button>
               </div>
-                <p class="hidden text-xs text-red-600 mt-2" id="password-error">8+ characters required</p>
               </div>
               <!-- End Form Group -->
-  
+   
               <button type="submit" class="w-full mt-5 py-3 px-4 text-sm font-semibold rounded-lg border border-transparent bg-green-600 text-white hover:bg-green-700">Masuk</button>
             </div>
           </form>
